--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-around;
-    width: 1000px;
-    height: 700px;
+    width: 100%;
+    height: 100%;
     /* border: 1px dashed palevioletred; */
     background-color: hsl(0 0% 100%);
 }
@@ -60,7 +60,7 @@ header h1{
     margin: 0px 0px 15px 0px;
     padding: 0px 0px 0px 0px;
     font-size: 40px;
-    font-weight: 50;
+    font-weight: 150;
     color: hsl(0deg 0% 66%);
 }
 header strong{
@@ -70,7 +70,7 @@ header h4{
     margin: 0px 0px 10px 0px;
     padding: 0px;
     font-size: 16px;
-    color: hsl(0deg 0% 66%);
+    color: #65696cd2;
     font-weight: 600;
 }
 
